--- a/Source code/Theme/Themes/Tabs/TabItem.xaml
+++ b/Source code/Theme/Themes/Tabs/TabItem.xaml
@@ -11,7 +11,7 @@
         <Setter Property="Background" Value="{StaticResource Background}"/>
         <Setter Property="BorderBrush" Value="{StaticResource Lowlight}"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Foreground" Value="{StaticResource MiddleLight}"/>
+        <Setter Property="Foreground" Value="{StaticResource Lowlight}"/>
         <Setter Property="FontFamily" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=FontFamily, Mode=OneWay}"/>
         <Setter Property="FontSize" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=HeaderFontSize, Mode=OneWay}"/>
         <Setter Property="FontWeight" Value="Normal"/>        
