- Remove redundant code from bat-files - Added ToggleSwitch class and style - Added trace warnings and errors where part of template not found or incorrect declared - Fixed bug #852

--- a/Source code/Theme/Themes/Buttons/DropDownCommandButton.xaml
+++ b/Source code/Theme/Themes/Buttons/DropDownCommandButton.xaml
@@ -16,6 +16,7 @@
                 <ControlTemplate TargetType="{x:Type controls:DropDownCommandButton}">
 
                     <Grid x:Name="LayoutRoot"
+                          Background="{StaticResource Transparent}"
                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
