--- a/Source code/Theme.Test/MainWindow.xaml
+++ b/Source code/Theme.Test/MainWindow.xaml
@@ -368,7 +368,8 @@
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="Auto"/>
 					<ColumnDefinition Width="Auto"/>
-					<ColumnDefinition Width="Auto"/>
+					<ColumnDefinition Width="100"/>
+					<ColumnDefinition Width="100"/>
 					<ColumnDefinition Width="100"/>
 					<ColumnDefinition Width="100"/>
 					<ColumnDefinition Width="100"/>
@@ -494,120 +495,140 @@
 					<ListBoxItem Content="6th ListBoxItem"/>
 					<ListBoxItem Content="7th ListBoxItem"/>
 				</ListBox>
-				<Slider Grid.Column="2"
+				<metro:ToggleSwitch Grid.Column="2"
+									Grid.Row="0"
+									IsEnabled="False"
+									IsChecked="False"
+									Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
+				<metro:ToggleSwitch Grid.Column="2"
+									Grid.Row="1"
+									IsEnabled="False"
+									IsChecked="True"
+									Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
+				<metro:ToggleSwitch Grid.Column="2"
+									Grid.Row="2"
+									IsEnabled="True"
+									IsChecked="False"
+									Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
+				<metro:ToggleSwitch Grid.Column="2"
+									Grid.Row="3"
+									IsEnabled="True"
+									IsChecked="True"
+									Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
+				<Slider Grid.Column="3"
 						Grid.Row="0"
 						IsEnabled="False"
 						Orientation="Horizontal"
 						Value="4"
 						Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"
 						Width="100"/>
-				<Slider Grid.Column="2"
+				<Slider Grid.Column="3"
 						Grid.Row="1"
 						Orientation="Horizontal"
 						Value="4"
 						Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"
 						Width="100"/>
-				<Slider Grid.Column="2"
+				<Slider Grid.Column="3"
 						Grid.Row="2"
 						IsEnabled="False"
 						Orientation="Vertical"
 						Value="6"
 						Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<Slider Grid.Column="2"
+				<Slider Grid.Column="3"
 						Grid.Row="3"
 						Orientation="Vertical"
 						Value="6"
 						Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="3"
+				<metro:LinearProgressBar Grid.Column="4"
 										 Grid.Row="0"
 										 IsEnabled="False"
 										 Orientation="Horizontal"
 										 Value="70"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="3"
+				<metro:LinearProgressBar Grid.Column="4"
 										 Grid.Row="1"
 										 Orientation="Horizontal"
 										 Value="70"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="3"
+				<metro:LinearProgressBar Grid.Column="4"
 										 Grid.Row="2"
 										 IsEnabled="False"
 										 Orientation="Vertical"
 										 Value="45"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="3"
+				<metro:LinearProgressBar Grid.Column="4"
 										 Grid.Row="3"
 										 Orientation="Vertical"
 										 Value="45"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="4"
+				<metro:LinearProgressBar Grid.Column="5"
 										 Grid.Row="0"
 										 IsEnabled="False"
 										 Orientation="Horizontal"
 										 State="Indeterminate"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="4"
+				<metro:LinearProgressBar Grid.Column="5"
 										 Grid.Row="1"
 										 Orientation="Horizontal"
 										 State="Indeterminate"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="4"
+				<metro:LinearProgressBar Grid.Column="5"
 										 Grid.Row="2"
 										 IsEnabled="False"
 										 Orientation="Vertical"
 										 State="Indeterminate"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="4"
+				<metro:LinearProgressBar Grid.Column="5"
 										 Grid.Row="3"
 										 Orientation="Vertical"
 										 State="Indeterminate"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="5"
+				<metro:LinearProgressBar Grid.Column="6"
 										 Grid.Row="0"
 										 IsEnabled="False"
 										 Orientation="Horizontal"
 										 State="Busy"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="5"
+				<metro:LinearProgressBar Grid.Column="6"
 										 Grid.Row="1"
 										 Orientation="Horizontal"
 										 State="Busy"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="5"
+				<metro:LinearProgressBar Grid.Column="6"
 										 Grid.Row="2"
 										 IsEnabled="False"
 										 Orientation="Vertical"
 										 State="Busy"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:LinearProgressBar Grid.Column="5"
+				<metro:LinearProgressBar Grid.Column="6"
 										 Grid.Row="3"
 										 Orientation="Vertical"
 										 State="Busy"
 										 Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:CircularProgressBar Grid.Column="6"
+				<metro:CircularProgressBar Grid.Column="7"
 										   Grid.Row="0"
 										   IsEnabled="False"
 										   Value="65"
 										   Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:CircularProgressBar Grid.Column="6"
+				<metro:CircularProgressBar Grid.Column="7"
 										   Grid.Row="1"
 										   Value="65"
 										   Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:CircularProgressBar Grid.Column="7"
+				<metro:CircularProgressBar Grid.Column="8"
 										   Grid.Row="0"
 										   IsEnabled="False"
-										   State="Indeterminate"
-										   Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:CircularProgressBar Grid.Column="7"
-										   Grid.Row="1"
 										   State="Indeterminate"
 										   Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
 				<metro:CircularProgressBar Grid.Column="8"
+										   Grid.Row="1"
+										   State="Indeterminate"
+										   Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
+				<metro:CircularProgressBar Grid.Column="9"
 										   Grid.Row="0"
 										   IsEnabled="False"
 										   State="Busy"
 										   Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
-				<metro:CircularProgressBar Grid.Column="8"
+				<metro:CircularProgressBar Grid.Column="9"
 										   Grid.Row="1"
 										   State="Busy"
 										   Margin="{Binding Source={x:Static metro:Parameters.Instance}, Path=BoldPadding, Mode=OneWay}"/>
