--- a/Source code/Theme/Themes/Buttons/CommandButtonBase.xaml
+++ b/Source code/Theme/Themes/Buttons/CommandButtonBase.xaml
@@ -29,7 +29,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type primitives:CommandButtonBase}">
                     
-                    <Grid SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                    <Grid Background="{StaticResource Transparent}"
+                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="Auto"/>
