--- a/Source code/Theme/Themes/Ranges/ToggleSwitch.xaml
+++ b/Source code/Theme/Themes/Ranges/ToggleSwitch.xaml
@@ -63,6 +63,9 @@
             <Trigger Property="IsDragging" Value="True">
                 <Setter Property="Background" Value="{StaticResource Lowlight}"/>
             </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" Value="{StaticResource Disabled}"/>
+            </Trigger>
         </Style.Triggers>
 
     </Style>
@@ -84,9 +87,9 @@
 
         <Setter Property="Padding" Value="0"/>
 
-        <Setter Property="MinHeight" Value="16"/>
-        <Setter Property="Height" Value="20"/>
-        <Setter Property="MaxHeight" Value="24"/>
+        <Setter Property="MinHeight" Value="14"/>
+        <Setter Property="Height" Value="18"/>
+        <Setter Property="MaxHeight" Value="22"/>
 
         <Setter Property="SnapsToDevicePixels" Value="True"/>
 
@@ -181,7 +184,8 @@
 
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="{StaticResource Disabled}"/>
+                <Setter Property="Background" Value="{StaticResource Background}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Disabled}"/>
                 <Setter Property="Foreground" Value="{StaticResource Disabled}"/>
             </Trigger>
         </Style.Triggers>
